# MemDBG

./: .gitignore  .gitmodules  Makefile  README.md
.github/: FUNDING.yml  pull_request_template.md
assets/: app-icon.icns
cheat-repository/: manifest.json
docs/: appstate.en.md  codecave.md  feature_research.md  memory.md  mobile_architecture.en.md  mobile_architecture.md  plugins.en.md  plugins.md  protocol.en.md  protocol.md  ps4_goldhen_launch.de.md  ps4_goldhen_launch.en.md  ps4_goldhen_launch.es.md  ps4_goldhen_launch.fr.md  ps4_goldhen_launch.it.md  ps4_goldhen_launch.ja.md  ps4_goldhen_launch.ko.md  ps4_goldhen_launch.md  ps4_goldhen_launch.pt.md  ps4_goldhen_launch.ru.md  ps5_validation_2026-07-18.en.md  ps5debug_compat.en.md  reconnect.en.md  reconnect.md  release_packaging.en.md  release_packaging.md  showcase.md
frontend/: CMakeLists.txt
frontend/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  manifest.json  pt.json  ru.json
frontend/src/: github_profile.hpp  memdbg_app.cpp  memdbg_app.hpp  memdbg_client.cpp  memdbg_client.hpp  protocol_probe.cpp  udp_log_listener.cpp  udp_log_listener.hpp
frontend/src/action_journal/: README.md  action_journal.cpp  action_journal.hpp
frontend/src/app/: app_state.hpp  main.cpp  memdbg_app.cpp
frontend/src/app/shell/: chrome.cpp  connection.cpp  internal.hpp  memdbg_app.cpp  memdbg_app.hpp  session.cpp  state.cpp
frontend/src/app/shell/mobile/: mobile.cpp
frontend/src/cheats/: cheat_repository.cpp  cheat_repository.hpp
frontend/src/core/: crash_logger.cpp  crash_logger.hpp  discovery_client.cpp  discovery_client.hpp  github_profile.cpp  memdbg_client.cpp  memdbg_client.hpp  payload_fetcher.cpp  payload_fetcher.hpp  payload_sender.cpp  payload_sender.hpp  platform.cpp  platform.hpp  platform_utils.hpp  release_check.cpp  release_check.hpp  repo_utils.hpp  udp_log_listener.cpp  udp_log_listener.hpp
frontend/src/core/client/: client_pool.cpp  client_pool.hpp  memdbg_client.cpp  memdbg_client.hpp  process_maps_parser.hpp
frontend/src/locale/: locale.cpp  locale.hpp  locale_repository.cpp  locale_repository.hpp
frontend/src/plugins/repository/: gui_bridge.cpp  gui_bridge.hpp  plugin_manager.cpp  plugin_manager.hpp
frontend/src/proto/: payload_injection_probe.cpp  performance_probe.cpp  protocol_probe.cpp
frontend/src/sandbox/: sandbox.hpp  sandbox_common.cpp  sandbox_engine.hpp  sandbox_limits.hpp  sandbox_lua.cpp  sandbox_policy.hpp  sandbox_python.cpp  sandbox_python_mobile.cpp  sandbox_result.hpp  sandbox_security.md
frontend/src/scanner/: structure_compare.cpp  structure_compare.hpp
frontend/src/scanner/heuristics/: auto_search.cpp  auto_search.hpp
frontend/src/screens/: screen_aob_scanner.cpp  screen_consoles.cpp  screen_credits.cpp  screen_debugger.cpp  screen_home.cpp  screen_logs.cpp  screen_memory.cpp  screen_pointer_scanner.cpp  screen_processes.cpp  screen_scanner.cpp  screen_settings.cpp  screen_taskmgr.cpp  screen_telemetry.cpp  screen_trainer.cpp
frontend/src/screens/aob_scanner/: screen_aob_scanner.cpp
frontend/src/screens/consoles/: screen_consoles.cpp
frontend/src/screens/credits/: screen_credits.cpp
frontend/src/screens/debugger/: debugger_disassembly.cpp  debugger_disassembly.hpp  debugger_internal.hpp  debugger_notebook.cpp  debugger_patch_studio.cpp  screen_debugger.cpp
frontend/src/screens/home/: screen_home.cpp
frontend/src/screens/klog/: screen_klog.cpp
frontend/src/screens/logs/: screen_logs.cpp
frontend/src/screens/lua/: screen_lua.cpp
frontend/src/screens/memory/: screen_memory.cpp
frontend/src/screens/plugins/: screen_plugin_gui.cpp  screen_plugins.cpp
frontend/src/screens/pointer_scanner/: screen_pointer_scanner.cpp
frontend/src/screens/processes/: map_selection.hpp  screen_processes.cpp
frontend/src/screens/scanner/: refine_match.hpp  scanner_async.cpp  scanner_compare.cpp  scanner_helpers.cpp  scanner_internal.hpp  scanner_session.cpp  screen_scanner.cpp  unknown_scan_plan.hpp
frontend/src/screens/settings/: screen_settings.cpp
frontend/src/screens/task_manager/: screen_taskmgr.cpp
frontend/src/screens/telemetry/: screen_telemetry.cpp
frontend/src/screens/tracer/: screen_tracer.cpp
frontend/src/screens/trainer/: screen_trainer.cpp
frontend/src/trainer/: batchcode_parser.cpp  batchcode_parser.hpp  trainer_format.cpp  trainer_format.hpp
frontend/src/ui/: confirm_modal.hpp  embedded_assets.inc  embedded_logo.hpp  fa_brands_400.inc  fa_solid_900.inc  file_picker.cpp  file_picker.hpp  icon_font.cpp  icon_font.hpp  theme_manager.cpp  theme_manager.hpp  ui_icons.hpp  ui_widgets.cpp  ui_widgets.hpp
frontend/tests/: test_action_journal.cpp  test_app_reconnect.cpp  test_app_state_parsing.cpp  test_auto_search.cpp  test_locale_manager.cpp  test_memdbg_client.cpp  test_payload_fetcher.cpp  test_payload_sender.cpp  test_plugin_manager.cpp  test_release_check.cpp  test_scanner_plan.cpp  test_structure_compare.cpp  test_trainer_formats.cpp
frontend/tests/sandbox/: test_sandbox_fuzz.cpp  test_sandbox_hardened.cpp  test_sandbox_python.cpp
github-pages/: README.md  index.html  styles.css
memdbg-tauri/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
memdbg-tauri/src-tauri/: Cargo.toml  README.md  tauri.conf.json
memdbg-tauri/src-tauri/capabilities/: default.json
memdbg-tauri/src-tauri/icons/: app-icon.icns  icon.icns
memdbg-tauri/src-tauri/src/: lib.rs  main.rs  mdbg.rs
mobile/: README.md
mobile/android/app/src/main/cpp/: CMakeLists.txt  native_android.cpp
mobile/ios/: CMakeLists.txt  ImGuiIOSKeyboardBridge.h  ImGuiIOSKeyboardBridge.mm  README.md  ViewController.mm
plugin-repository/: manifest.json
src/: sjson_impl.c
tests/: bench_utils.h  e2e_utils.c  e2e_utils.h  fixture_memdbg_instance.c  fixture_memdbg_instance.h  fuzz_lz4.c  fuzz_process_maps.c  fuzz_protocol_header.c  fuzz_sjson.c  test_aob_boundary.c  test_benchmarks.c  test_debugger.c  test_debugger_e2e.c  test_debugger_protocol.c  test_idle_timeout_e2e.c  test_kqueue_timeout.c  test_legacy_process_e2e.c  test_legacy_scanner_e2e.c  (+25 more)
(+250 files in other folders)
