cmake_minimum_required(VERSION 3.24)

project(memdbg_frontend VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
foreach(config DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${config} ${CMAKE_BINARY_DIR}/bin)
endforeach()

include(FetchContent)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
  glfw
  GIT_REPOSITORY https://github.com/glfw/glfw.git
  GIT_TAG 3.4
)

FetchContent_Declare(
  imgui
  GIT_REPOSITORY https://github.com/ocornut/imgui.git
  GIT_TAG v1.90.9
)

FetchContent_Declare(
  stb
  GIT_REPOSITORY https://github.com/nothings/stb.git
  GIT_TAG master
)

FetchContent_Declare(
  nlohmann_json
  GIT_REPOSITORY https://github.com/nlohmann/json.git
  GIT_TAG v3.11.3
)

FetchContent_MakeAvailable(glfw imgui stb nlohmann_json)

find_package(OpenGL REQUIRED)
find_package(Threads REQUIRED)

add_library(imgui STATIC
  ${imgui_SOURCE_DIR}/imgui.cpp
  ${imgui_SOURCE_DIR}/imgui_draw.cpp
  ${imgui_SOURCE_DIR}/imgui_tables.cpp
  ${imgui_SOURCE_DIR}/imgui_widgets.cpp
  ${imgui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp
  ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
)

target_include_directories(imgui PUBLIC
  ${imgui_SOURCE_DIR}
  ${imgui_SOURCE_DIR}/backends
)

target_link_libraries(imgui PUBLIC glfw OpenGL::GL)

# ---- memdbg_frontend ----

set(MEMDBG_APP_ICON_PNG ${CMAKE_CURRENT_SOURCE_DIR}/../assets/app-icon.png)
set(MEMDBG_APP_ICON_ICO ${CMAKE_CURRENT_SOURCE_DIR}/../assets/app-icon.ico)
set(MEMDBG_APP_ICON_ICNS ${CMAKE_CURRENT_SOURCE_DIR}/../assets/app-icon.icns)

# ---- Embedded assets (locales + imgui.ini) ----
# Generated at build time by tools/embed_assets.py.
set(MEMDBG_EMBEDDED_ASSETS_INC ${CMAKE_CURRENT_SOURCE_DIR}/src/ui/embedded_assets.inc)
add_custom_command(
  OUTPUT ${MEMDBG_EMBEDDED_ASSETS_INC}
  COMMAND python3
    "${CMAKE_CURRENT_SOURCE_DIR}/../tools/embed_assets.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/locales"
    "${CMAKE_CURRENT_SOURCE_DIR}/../imgui.ini"
    "${MEMDBG_EMBEDDED_ASSETS_INC}"
  DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/../tools/embed_assets.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/../imgui.ini"
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/de.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/en.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/es.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/fr.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/it.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/ja.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/pt.json
    ${CMAKE_CURRENT_SOURCE_DIR}/locales/ru.json
  COMMENT "Generating embedded assets (locales + imgui.ini)"
)
set_source_files_properties(${MEMDBG_EMBEDDED_ASSETS_INC} PROPERTIES GENERATED TRUE)
set_source_files_properties(
  src/locale/locale.cpp
  src/app/memdbg_app.cpp
  PROPERTIES OBJECT_DEPENDS ${MEMDBG_EMBEDDED_ASSETS_INC}
)

add_executable(memdbg_frontend
  # app (entry point, shell, shared state)
  src/app/main.cpp
  src/app/memdbg_app.cpp

  # core (backend clients)
  src/core/crash_logger.cpp
  src/core/github_profile.cpp
  src/core/memdbg_client.cpp
  src/core/platform.cpp
  src/core/udp_log_listener.cpp

  # ui (widgets, theme, fonts, icons, file picker)
  src/ui/icon_font.cpp
  src/ui/ui_widgets.cpp
  src/ui/file_picker.cpp

  # locale (i18n / translations)
  src/locale/locale.cpp

  # pal (LZ4 decompression for client)
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/pal/lz4.c

  # screens
  src/screens/screen_home.cpp
  src/screens/screen_consoles.cpp
  src/screens/screen_processes.cpp
  src/screens/screen_memory.cpp
  src/screens/screen_scanner.cpp
  src/screens/screen_pointer_scanner.cpp
  src/screens/screen_aob_scanner.cpp
  src/screens/screen_trainer.cpp
  src/screens/screen_logs.cpp
  src/screens/screen_telemetry.cpp
  src/screens/screen_taskmgr.cpp
  src/screens/screen_settings.cpp
  src/screens/screen_credits.cpp

  # trainer
  src/trainer/trainer_format.cpp

  # scanner (auto-search heuristic engine)
  src/scanner/auto_search.cpp
)

target_include_directories(memdbg_frontend PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}/../include
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/src/app
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/screens
  ${CMAKE_CURRENT_SOURCE_DIR}/src/trainer
  ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner
  ${CMAKE_CURRENT_SOURCE_DIR}/src/locale
  ${CMAKE_CURRENT_SOURCE_DIR}/src/proto
  ${stb_SOURCE_DIR}
  ${nlohmann_json_SOURCE_DIR}/include
)

target_link_libraries(memdbg_frontend PRIVATE imgui Threads::Threads)

if(APPLE)
  target_sources(memdbg_frontend PRIVATE ${MEMDBG_APP_ICON_ICNS})
  set_source_files_properties(${MEMDBG_APP_ICON_ICNS}
    PROPERTIES MACOSX_PACKAGE_LOCATION "Resources"
  )
  set_target_properties(memdbg_frontend PROPERTIES
    OUTPUT_NAME "MemDBG"
    MACOSX_BUNDLE TRUE
    MACOSX_BUNDLE_BUNDLE_NAME "MemDBG"
    MACOSX_BUNDLE_GUI_IDENTIFIER "io.github.seregonwar.memdbg"
    MACOSX_BUNDLE_ICON_FILE "app-icon.icns"
    MACOSX_BUNDLE_SHORT_VERSION_STRING "${PROJECT_VERSION}"
    MACOSX_BUNDLE_BUNDLE_VERSION "${PROJECT_VERSION}"
    MACOSX_BUNDLE_COPYRIGHT "Copyright (C) 2026 SeregonWar"
  )
  add_custom_command(TARGET memdbg_frontend POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:memdbg_frontend>/assets"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MEMDBG_APP_ICON_PNG}"
            "$<TARGET_FILE_DIR:memdbg_frontend>/assets/app-icon.png"
    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_BUNDLE_CONTENT_DIR:memdbg_frontend>/Resources/assets"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MEMDBG_APP_ICON_PNG}"
            "$<TARGET_BUNDLE_CONTENT_DIR:memdbg_frontend>/Resources/assets/app-icon.png"
  )
else()
  add_custom_command(TARGET memdbg_frontend POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:memdbg_frontend>/assets"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MEMDBG_APP_ICON_PNG}"
            "$<TARGET_FILE_DIR:memdbg_frontend>/assets/app-icon.png"
  )
endif()

if(WIN32)
  file(TO_CMAKE_PATH "${MEMDBG_APP_ICON_ICO}" MEMDBG_APP_ICON_ICO_CMAKE)
  set(MEMDBG_WINDOWS_RC "${CMAKE_CURRENT_BINARY_DIR}/memdbg_frontend.rc")
  file(WRITE "${MEMDBG_WINDOWS_RC}" "IDI_MEMDBG_ICON ICON \"${MEMDBG_APP_ICON_ICO_CMAKE}\"\n")
  target_sources(memdbg_frontend PRIVATE "${MEMDBG_WINDOWS_RC}")
endif()

if(UNIX AND NOT APPLE)
  set(MEMDBG_DESKTOP_FILE "${CMAKE_CURRENT_BINARY_DIR}/MemDBG.desktop")
  file(WRITE "${MEMDBG_DESKTOP_FILE}"
"[Desktop Entry]\n"
"Type=Application\n"
"Name=MemDBG\n"
"Comment=Native memory debugger frontend\n"
"Exec=memdbg_frontend\n"
"Icon=app-icon\n"
"Terminal=false\n"
"Categories=Development;Debugger;\n"
  )
  add_custom_command(TARGET memdbg_frontend POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MEMDBG_DESKTOP_FILE}"
            "$<TARGET_FILE_DIR:memdbg_frontend>/MemDBG.desktop"
  )
endif()

# ---- memdbg_probe (standalone protocol tester) ----

add_executable(memdbg_probe
  src/proto/protocol_probe.cpp
  src/core/memdbg_client.cpp
  src/core/platform.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/pal/lz4.c
)

target_include_directories(memdbg_probe PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}/../include
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core
  ${CMAKE_CURRENT_SOURCE_DIR}/src/proto
)

target_link_libraries(memdbg_probe PRIVATE Threads::Threads)

# ---- memdbg_auto_search_test ----

add_executable(memdbg_auto_search_test
  tests/test_auto_search.cpp
  src/scanner/auto_search.cpp
)

target_include_directories(memdbg_auto_search_test PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}/../include
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/src/app
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core
  ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner
  ${imgui_SOURCE_DIR}
)

# ---- platform specific ----

if(APPLE)
  target_compile_definitions(memdbg_frontend PRIVATE GL_SILENCE_DEPRECATION)
endif()

if(WIN32)
  target_compile_definitions(memdbg_frontend PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX _CRT_SECURE_NO_WARNINGS)
  target_compile_definitions(memdbg_probe PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX _CRT_SECURE_NO_WARNINGS)
  target_link_libraries(memdbg_frontend PRIVATE ws2_32 shell32)
  target_link_libraries(memdbg_probe PRIVATE ws2_32 shell32)
endif()

if(MSVC)
  target_compile_options(memdbg_frontend PRIVATE /W4)
  target_compile_options(memdbg_probe PRIVATE /W4)
  target_compile_options(memdbg_auto_search_test PRIVATE /W4)
else()
  target_compile_options(memdbg_frontend PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(memdbg_probe PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(memdbg_auto_search_test PRIVATE -Wall -Wextra -Wpedantic)
endif()
